@@ -1,3 +1,7 @@
+2013-11-13  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/guality/param-4.c: New test.
+
 2013-11-13  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/c11-complex-1.c: New test.
