@@ -1,3 +1,12 @@
+2013-11-13  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* cfgexpand.c (expand_used_vars): Allocate space for partitions based
+	on PARM_DECLs or RESULT_DECLs only if they are ignored for debug info
+	or if optimization is enabled.
+	* tree-ssa-coalesce.c (coalesce_ssa_name): If optimization is disabled,
+	require that all the names based on a PARM_DECL or a RESULT_DECL that
+	isn't ignored for debug info be coalesced.
+
 2013-11-13  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
 
 	* config/c6x/c6x.c: Include "gimple-expr.h".
